--- a/MUSIC APP/index.html
+++ b/MUSIC APP/index.html
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Music App</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <main class="head"></main>
+
+    <h1>Music Player</h1>
+    <div class="music-container  ">
+        <div class="music-info">
+            <h4 id="title">
+                ukulele
+            </h4>
+            <div class="progress-container">
+                <div class="progress"></div>
+            </div>
+        </div>
+        <audio src="music/ukulele.mp3" id="audio"></audio>
+        <div class="img-container">
+            <img src="images/ukulele.jpg" alt="music-cover" id="cover">
+        </div>
+        <div class="navigation">
+            <button id="previous" class="action-btn">
+                <i class="fas fa-backward"></i>
+            </button>
+            <button id="play" class="action-btn action-btn-big">
+                <i class="fas fa-play"></i>
+            </button>
+            <button id="next" class="action-btn">
+                <i class="fas fa-forward"></i>
+            </button>
+        </div>
+    </div>
+    
+
 
     <script src="js/custom.js"></script>
 </body>
